--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap');
+
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 #app {
-  display: grid;
-  place-items: center;
+  max-width: 400px;
+  margin: 0 auto;
 }
