feat: 숫자 야구 게임 구현

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,12 @@ body {
   display: grid;
   place-items: center;
 }
+
+#user-input {
+  width: 150px;
+}
+
+#result {
+  margin-bottom: 10px;
+  font-size: 18px;
+}
